Finish first module of project

--- a/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news/app/src/main/res/values/strings.xml
+++ b/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="article_saved_successful">Artigo salvo com sucesso!</string>
     <string name="article_delete_successful">Artigo deletado com sucesso</string>
     <string name="undo">desfazer</string>
+    <string name="image_from_news">Image from News</string>
+    <string name="favorite_string_resource">Favorite Icon Button</string>
 </resources>
