--- a/Full Android Development 2022 - Create 18 Apps/app_task_list/app/src/main/res/values/strings.xml
+++ b/Full Android Development 2022 - Create 18 Apps/app_task_list/app/src/main/res/values/strings.xml
@@ -9,4 +9,20 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="rv_label_task_name">Task Name</string>
+
+    <string name="operation_save">save</string>
+    <string name="operation_update">update</string>
+
+    <string name="operation_success"> Success to %1$s Task</string>
+    <string name="operation_failed"> Error on %1$s Task</string>
+
+    <string name="confirm_delete"> Do you want to remove the task: %1$s ?</string>
+    <string name="title_confirm_delete">Confirm Deletion</string>
+
+    <string name="delete_operation_failed"> Error on delete Task</string>
+    <string name="delete_operation_success"> Success on delete Task</string>
+
+    <string name="yes">Yes</string>
+    <string name="cancel">Cancel</string>
 </resources>
