--- a/Full Android Development 2022 - Create 18 Apps/app_organizze/app/src/main/res/values/strings.xml
+++ b/Full Android Development 2022 - Create 18 Apps/app_organizze/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">app_organizze</string>
+    <string name="app_name">Organizze</string>
     <string name="title_activity_home">HomeActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -9,4 +9,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="loading">Loading</string>
+    <string name="general_balance">General Balance</string>
+    <string name="r_0">$ 0.00</string>
+    <string name="logout">Logout</string>
 </resources>
